[package]
name = "crypto-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
# async
tokio = { version = "1", features = ["full"] }

# websocket + http server
warp = "0.3"

# HTTP client 
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# serialization / deserialization (JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async stream utilities
futures-util = "0.3"

# Error handling helpers
thiserror = "1"
anyhow = "1"

# Timestamps 
chrono = { version = "0.4", features = ["serde"]}

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Load .env file 
dotenv = "0.15"
